SERVER-17202 return to RECOVERING if an error is encountered during a rollback to avoid being trapped in ROLLBACK

(cherry picked from commit 5ff520902528d5fff857632e9d03534cf3761884)